--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.487.0",
     "meshline": "^3.3.1",
-    "motion": "^12.6.3",
+    "motion": "^12.10.5",
     "next": "15.2.4",
+    "nodemailer": "^7.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.1.0",
     "three": "^0.175.0",
     "tw-animate-css": "^1.2.5"
@@ -34,6 +36,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/locomotive-scroll": "^4.1.4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
