--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
+    "lenis": "^1.3.4",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.487.0",
     "meshline": "^3.3.1",
