--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.1",
     "gsap": "^3.12.7",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lenis": "^1.3.4",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.487.0",
