--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lucide-react": "^0.487.0",
     "meshline": "^3.3.1",
     "motion": "^12.10.5",
-    "next": "15.2.4",
+    "next": "^16.0.0",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.2",
     "react": "^19.0.0",
@@ -53,7 +53,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
